@@ -1,3 +1,5 @@
+0,1671
+    - added environment variable DBIX_CUSTOM_DEBUG
 0.1670
     - removed EXPERIMETNAL select() column hash option. it's a little complex.
     - added EXPERIMENTAL select() param option.
